Added Additional Functionality to Calculator and Main
Added Buttons, About to add a spinner

--- a/app/src/main/res/layout/content_calculator.xml
+++ b/app/src/main/res/layout/content_calculator.xml
@@ -10,12 +10,103 @@
     tools:showIn="@layout/activity_calculator"
     tools:context="com.benlewis.fitness531app.Calculator">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:id="@+id/linearLayout2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="1RM Calculator"
+            android:id="@+id/oneRMTextView"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal|bottom"
+            android:textSize="45sp" />
+    </LinearLayout>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="7"
+        android:id="@+id/calcWeightEditText"
+        android:gravity="center"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="Weight (KG)" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="7"
+        android:id="@+id/calcRepsEditText"
+        android:layout_alignTop="@+id/calcWeightEditText"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center"
+        android:hint="Reps" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="x"
+        android:id="@+id/calcXView"
+        android:textSize="30sp"
+        android:layout_alignTop="@+id/calcRepsEditText"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculated 1RM"
+        android:id="@+id/calc1RMTextView"
+        android:textSize="30sp"
+        android:layout_above="@+id/calcResultTextView"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Calc"
-        android:id="@+id/textView"
+        android:id="@+id/calcResultTextView"
         android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:hint="Result"
+        android:gravity="center" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate"
+        android:id="@+id/calcButton"
+        android:layout_below="@+id/calcXView"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Push To App"
+        android:id="@+id/calcPushPreferencesButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/calcButton"
+        android:layout_alignStart="@+id/calcButton"
+        android:layout_marginBottom="45dp" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/calcSpinner"
+        android:layout_above="@+id/calcPushPreferencesButton"
+        android:layout_centerHorizontal="true"
+        android:spinnerMode="dropdown" />
+
 </RelativeLayout>
