Error Proofed Calculator Class
Using SnackBars.
Next will be to error proof Settings, then make some QoL to the timer.

--- a/app/src/main/res/layout/content_calculator.xml
+++ b/app/src/main/res/layout/content_calculator.xml
@@ -8,7 +8,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_calculator"
-    tools:context="com.benlewis.fitness531app.Calculator">
+    tools:context="com.benlewis.fitness531app.Calculator"
+    android:id="@+id/calcLayout">
 
     <LinearLayout
         android:orientation="horizontal"
