--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3399FF</color>
+    <color name="colorPrimary">#3399ff</color>
     <color name="colorPrimaryDark">#3366CC</color>
     <color name="colorAccent">#333399</color>
     <color name="primary_text_default_material_light">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
