--- a/app/src/main/res/layout/content_calculator.xml
+++ b/app/src/main/res/layout/content_calculator.xml
@@ -19,8 +19,8 @@
         android:id="@+id/calcWeightEditText"
         android:gravity="center"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:hint="Weight (KG)" />
+        android:layout_alignParentStart="false"
+        android:hint="Weight" />
 
     <EditText
         android:layout_width="wrap_content"
