--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#333399</color>
     <color name="primary_text_default_material_light">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="gray">#000000</color>
+    <color name="background_material_light">#ffffff</color>
+    <color name="secondary_text_default_material_light">#000000</color>
+    <color name="secondary_text_material_light">#000000</color>
 </resources>
