--- a/app/src/main/res/color/primary_text_material_light.xml
+++ b/app/src/main/res/color/primary_text_material_light.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_enabled="false" android:alpha="@dimen/disabled_alpha_material_light" android:color="@android:color/white" />
-    <item android:color="@android:color/white" />
+    <item android:state_enabled="false" android:alpha="@dimen/disabled_alpha_material_light" android:color="@color/gray" />
+    <item android:color="@color/gray" />
 </selector>
