--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,6 @@
     <item android:id="@+id/settings" android:title="Set"
         android:orderInCategory="2" app:showAsAction="always" />
 
-    <item android:id="@+id/calculator" android:title="Calc"
+    <item android:id="@+id/calculator" android:title="Calc" android:icon="@drawable/"
         android:orderInCategory="1" app:showAsAction="always" />
 </menu>
