--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/settings" android:title="Set"
+    <item android:id="@+id/settings" android:title="Set" android:icon="@drawable/set"
         android:orderInCategory="2" app:showAsAction="always" />
 
-    <item android:id="@+id/calculator" android:title="Calc" android:icon="@drawable/"
+    <item android:id="@+id/calculator" android:title="Calc" android:icon="@drawable/calc"
         android:orderInCategory="1" app:showAsAction="always" />
 </menu>
