--- a/app/src/main/res/layout/content_calculator.xml
+++ b/app/src/main/res/layout/content_calculator.xml
@@ -52,7 +52,7 @@
         android:id="@+id/calc1RMTextView"
         android:textSize="30sp"
         android:textColor="#000000"
-        android:layout_below="@+id/calcButton"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -62,9 +62,9 @@
         android:id="@+id/calcResultTextView"
         android:hint="Result"
         android:gravity="center"
+        android:textAlignment="center"
         android:layout_below="@+id/calc1RMTextView"
-        android:layout_toLeftOf="@+id/calcRepsEditText"
-        android:layout_toStartOf="@+id/calcRepsEditText" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -73,8 +73,9 @@
         android:id="@+id/calcButton"
         android:textColor="#ffffff"
         android:background="#3399ff"
-        android:layout_below="@+id/calcWeightEditText"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/calcXView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5sp" />
 
     <Button
         android:layout_width="wrap_content"
