--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -53,87 +53,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linearLayout2"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout2">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Warmup"
-            android:id="@+id/warmupTextView"
-            android:textSize="30sp"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="warmup1"
-            android:id="@+id/warmup1TextView"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="5sp"
-            android:textSize="30sp"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="warmup2"
-            android:id="@+id/warmup2TextView"
-            android:layout_gravity="center_horizontal"
-            android:textSize="30sp"
-            android:layout_marginTop="5sp"
-            android:layout_marginBottom="5sp"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="warmup3"
-            android:id="@+id/warmup3TextView"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5sp"
-            android:layout_marginBottom="5sp"
-            android:textSize="30sp"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/main531TextView"
-            android:textSize="30sp"
-            android:hint="5/3/1"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/main531_1"
-            android:layout_gravity="center_horizontal"
-            android:textIsSelectable="false"
-            android:textSize="30sp"
-            android:hint="5/3/1"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/main531_2"
-            android:layout_gravity="center_horizontal"
-            android:textSize="30sp"
-            android:hint="5/3/1"
-            android:textColor="#000000" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/main531_3"
-            android:layout_gravity="center_horizontal"
-            android:textIsSelectable="false"
-            android:textSize="30sp"
-            android:hint="5/3/1"
-            android:textColor="#000000" />
+        android:layout_alignParentStart="true">
 
     </LinearLayout>
 
@@ -143,9 +66,9 @@
         android:text="0:00"
         android:id="@+id/mainTimerTextView"
         android:textSize="25sp"
-        android:layout_below="@+id/mainStopStartButton"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp" />
+        android:layout_marginBottom="43dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -155,7 +78,7 @@
         android:background="#3399ff"
         android:paddingLeft="0dp"
         android:textColor="#ffffff"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_alignTop="@+id/mainStopStartButton"
         android:layout_toRightOf="@+id/mainTimerTextView"
         android:layout_toEndOf="@+id/mainTimerTextView" />
 
@@ -166,8 +89,125 @@
         android:id="@+id/mainStopStartButton"
         android:background="#3399ff"
         android:textColor="#ffffff"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_above="@+id/mainTimerTextView"
         android:layout_toLeftOf="@+id/mainTimerTextView"
-        android:layout_toStartOf="@+id/mainTimerTextView" />
+        android:layout_toStartOf="@+id/mainTimerTextView"
+        android:layout_marginBottom="10sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Warmup"
+        android:id="@+id/warmupTextView"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20sp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="warmup1"
+        android:id="@+id/warmup1TextView"
+        android:layout_gravity="center_horizontal"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:layout_below="@+id/warmupTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20sp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="warmup2"
+        android:id="@+id/warmup2TextView"
+        android:layout_gravity="center_horizontal"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:layout_below="@+id/warmup1TextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20sp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="warmup3"
+        android:id="@+id/warmup3TextView"
+        android:layout_gravity="center_horizontal"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:layout_below="@+id/warmup2TextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20sp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/main531TextView"
+        android:textSize="30sp"
+        android:textColor="#000000"
+        android:text="5/3/1"
+        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="40sp"
+        android:textAlignment="textStart"
+        android:singleLine="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/main531_1"
+        android:layout_gravity="center_horizontal"
+        android:textIsSelectable="false"
+        android:textSize="30sp"
+        android:hint="5/3/1"
+        android:textColor="#000000"
+        android:layout_below="@+id/main531TextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="40sp"
+        android:textAlignment="textStart"
+        android:singleLine="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/main531_2"
+        android:layout_gravity="center_horizontal"
+        android:textSize="30sp"
+        android:hint="5/3/1"
+        android:textColor="#000000"
+        android:layout_below="@+id/main531_1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="40sp"
+        android:textAlignment="textStart"
+        android:singleLine="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/main531_3"
+        android:layout_gravity="center_horizontal"
+        android:textIsSelectable="false"
+        android:textSize="30sp"
+        android:hint="5/3/1"
+        android:textColor="#000000"
+        android:layout_alignTop="@+id/warmup3TextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="40sp"
+        android:textAlignment="textStart"
+        android:singleLine="false" />
 
 </RelativeLayout>
